# hs-server-starter

./: .gitignore  LICENSE  README.md  hs-server-starter.cabal  package.yaml  stack.yaml
app/: server-starter-warp-example.hs
src/Network/ServerStarter/: Socket.hs
test/: test-ss-socket.hs
