name:                hs-server-starter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hiratara/hs-server-starter#readme
license:             BSD3
license-file:        LICENSE
author:              Masahiro Honma
maintainer:          hiratara@cpan.orggg
copyright:           Copyright 2017- hiratara
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.ServerStarter.Socket
  build-depends:       base >= 4.7 && < 5
                     , network
  default-language:    Haskell2010

executable server-starter-warp-example
  hs-source-dirs:      app
  main-is:             server-starter-warp-example.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs-server-starter
                     , http-types
                     , warp
                     , wai
                     , network
  default-language:    Haskell2010

test-suite hs-server-starter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-ss-socket.hs
  build-depends:       base
                     , hs-server-starter
                     , network
                     , unix
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hiratara/hs-server-starter
